--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div class="title">
+        <h1>안녕하세요?</h1>
+        <h1>방문 목적을 말씀해주세요.</h1>
+    </div>
     <div class="box">
         <form action="" name="search">
             <input type="text" class="input" name="txt" onmouseout="document.search.txt.value=''">
