--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         <h1>안녕하세요?</h1>
         <h1>방문 목적을 말씀해주세요.</h1>
     </div>
-    <div class="box">
-        <form action="" name="search">
-            <input type="text" class="input" name="txt" onmouseout="document.search.txt.value=''">
-        </form>
-        <i class="fa fa-search"></i>
+    <div class="contWrap">
+        <div class="box">
+            <form action="" name="search" class="boxForm">
+                <input type="text" class="input" name="txt" onmouseout="document.search.txt.value=''">
+                <i class="fa fa-search"></i>
+            </form>
+        </div>
     </div>
 </body>
 </html>
