--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2021.08.13 side</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/reset.min.css">
+    <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
     <div class="title">
         <h1>안녕하세요?</h1>
-        <h1>방문 목적을 말씀해주세요.</h1>
+        <h2>방문해 주셔서 감사합니다.</h2>
+        <h2>방문 목적이 무엇인가요?</h2>
     </div>
     <div class="contWrap">
         <div class="box">
