commit 2021.08.13 side PJ

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <input type="text" class="input" name="txt" onmouseout="document.search.txt.value=''">
                 <i class="fa fa-search"></i>
             </form>
-            <a href="" class="moveBtn">이동하기</a>
+            <button class="moveBtn">이동하기</button>
         </div>
     </div>
 </body>
